--- a/sass/_ayuda.scss
+++ b/sass/_ayuda.scss
@@ -45,25 +45,7 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 
-        .name-complete {
-            width: auto;
-            display: flex;
-            justify-content: left;
-            column-gap: 10px;
-        }
-
-        .date-contact {
-            width: auto;
-            display: flex;
-            justify-content: left;
-            column-gap: 10px;
-        }
-
         .user-region {
-            width: auto;
-            display: flex;
-            justify-content: left;
-            column-gap: 10px;
 
             .region {
                 color: #7a7a7a;
@@ -152,4 +134,17 @@
             }
         }
     }
+}
+
+/* mixin */
+
+@mixin area-form {
+    width: auto;
+    display: flex;
+    justify-content: left;
+    column-gap: 10px;
+}
+
+.area-form {
+    @include area-form;
 }
