--- a/sass/main.scss
+++ b/sass/main.scss
@@ -83,6 +83,7 @@ footer {
 
         div {
             padding: 100px;
+            width: 50%;
 
             h2 {
                 font-size: 2.5rem;
@@ -98,17 +99,22 @@ footer {
                 margin-bottom: 50px;
             }
 
-            .boton-info {
-                border: 1px solid #ffffff;
-                cursor: pointer;
-                font-weight: 900;
-                padding: 10px 20px;
-                margin-left: 20px;
-            }
+            .btn-ind {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: left;
+                padding: 0;
+                width: auto;
 
-            .boton-info2 {
-                @extend .boton-info;
-                margin-left: 30px;
+                a {
+                    border: 1px solid #ffffff;
+                    cursor: pointer;
+                    font-weight: 900;
+                    padding: 10px 30px;
+                    margin-left: 20px;
+                    margin-bottom: 10px
+                }
+
             }
         }
 
